# nn_lab1

./: 1.ipynb  pyproject.toml
results_spiowm/: learning_histories_20250406_222122.json  learning_histories_20250406_222122.pkl  model_results_20250406_222122.csv
